--- a/VituPetFeeder/package.json
+++ b/VituPetFeeder/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@react-native-clipboard/clipboard": "^1.14.0",
     "@react-native-community/async-storage": "^1.12.1",
+    "@react-native-community/datetimepicker": "^8.0.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/native": "^6.1.17",
@@ -20,6 +21,7 @@
     "@react-navigation/stack": "^6.3.29",
     "axios": "^1.6.8",
     "expo": "^50.0.0",
+    "expo-local-authentication": "~13.8.0",
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-gesture-handler": "^2.16.0",
@@ -49,7 +51,6 @@
     "jest": "^29.6.3",
     "prettier": "2.8.8",
     "react-test-renderer": "18.2.0",
-    "reactotron-react-native": "^5.1.6",
     "typescript": "5.0.4"
   },
   "engines": {
